# robinarb

./: .gitignore  Cargo.toml  README.md  config.toml.example
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ArbExecutor.sol  DataSync.sol  FeeProbe.sol  PoolQuoter.sol  TickSync.sol
contracts/test/: ArbExecutor.t.sol  ArbExecutorAlgebra.t.sol  ArbExecutorV4.t.sol  ForkReplay.t.sol  GasProbe.t.sol  GuardRegression.t.sol  MorphoFlashLoan.t.sol  RealRouteExecution.t.sol  ReplayAll.t.sol  TokenProbe.t.sol
scripts/: fetch_pools.mjs
src/: abi.rs  app.rs  config.rs  constants.rs  main.rs  pricing.rs  state.rs  stats.rs  verify.rs
src/engine/: engine.rs  mod.rs  pool_meta.rs  types.rs
src/executor/: encoder.rs  lanes.rs  mod.rs  nonce.rs  sender.rs
src/gas/: gas_station.rs  mod.rs
src/ingest/: backend.rs  bootstrap.rs  discovery.rs  fee_probe.rs  fees.rs  loader.rs  mod.rs  multicall.rs  pipeline.rs  rpc_backend.rs  slot_layout.rs
src/math/: aero_stable.rs  mod.rs  v2.rs  v3.rs
src/routing/: evaluator.rs  graph.rs  mod.rs  optimizer.rs  store.rs  types.rs
